--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -23,7 +23,21 @@ env:
   HELM_REPOSITORY: "eq-lab/devops-helm-charts-deploy"
 
 jobs:
+  testing:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x, 18.x, 20.x]
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: yarn gen
+      - run: yarn start --suite=longAndShort
   build-image:
+    needs: testing
     runs-on: ubuntu-latest
     steps:
       - name: Set up QEMU
