--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -25,15 +25,13 @@ env:
 jobs:
   testing:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 18.14.2
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18.14.2
+      - run: cd ./int-tests/
       - run: yarn gen
       - run: yarn start --suite=longAndShort
   build-image:
