--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.14.2
-      - run: cd ./int-tests/
+      - run: cd ./packages/int-tests/
       - run: yarn gen
       - run: yarn start --suite=longAndShort
   build-image:
