--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -32,8 +32,8 @@ jobs:
         with:
           node-version: 18.14.2
       - run: cd ./packages/int-tests/
-      - run: yarn gen
-      - run: yarn start --suite=longAndShort
+      - run: pwd && ls -la && yarn gen
+      - run: yarn start --suite=short
   build-image:
     needs: testing
     runs-on: ubuntu-latest
