--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -37,9 +37,9 @@ jobs:
         with:
           node-version: 18.14.2
       - run: >
-          cd ./packages/int-tests/
-          pwd && ls -la && yarn gen
-          yarn start --suite=short
+          cd ./packages/int-tests/ \
+          && pwd && ls -la && yarn gen \
+          && yarn start --suite=short
       # - run: pwd && ls -la && yarn gen
       # - run: yarn start --suite=short
       # - name: Test ${{ matrix.test-short }}
