--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -36,10 +36,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.14.2
-      - run: >
-          cd ./packages/int-tests/ \
-          && pwd && ls -la && yarn gen \
-          && yarn start --suite=short
+      - run: |
+          cd ./packages/int-tests/ 
+          pwd && ls -la && yarn gen 
+          yarn start --suite=short
       # - run: pwd && ls -la && yarn gen
       # - run: yarn start --suite=short
       # - name: Test ${{ matrix.test-short }}
