--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -37,7 +37,8 @@ jobs:
         with:
           node-version: 18.14.2
       - run: |
-          cd ./packages/int-tests/ 
+          cd ./packages/int-tests/
+          yarn 
           pwd && ls -la && yarn gen 
           yarn start --suite=short
       # - run: pwd && ls -la && yarn gen
