--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -37,8 +37,9 @@ jobs:
         with:
           node-version: 18.14.2
       - run: |
-          yarn
           cd ./packages/int-tests/
+          yarn
+          yarn build
           yarn gen 
           yarn start --suite=short
       # - run: pwd && ls -la && yarn gen
