--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -27,8 +27,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        test-short: [short, shortIncome, simulation1, simulation2, simulation3, mc, shortEmergency]
-        test-long: [long, longIncome, simulation1, simulation2, simulation3, mc, longEmergency]
+        # test-short: [short, shortIncome, simulation1, simulation2, simulation3, mc, shortEmergency]
+        # test-long: [long, longIncome, simulation1, simulation2, simulation3, mc, longEmergency]
         test-shortandlong: [longAndShort, simulation1, simulation2, mc]
     steps:
       - uses: actions/checkout@v3
@@ -44,7 +44,7 @@ jobs:
       #     yarn start --suite=short
       # - run: pwd && ls -la && yarn gen
       # - run: yarn start --suite=short
-      - name: Test ${{ matrix.test-short }}
+      - name: Test ${{ matrix.test-shortandlong }}
         run: |
           cd ./packages/int-tests/
           yarn 
