--- a/.github/workflows/deploy-ganache-node.yml
+++ b/.github/workflows/deploy-ganache-node.yml
@@ -1,10 +1,7 @@
 name: Deploy ganache node CI
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch:
 
 env:
   REGISTRY: trufflesuite/ganache
