--- a/.github/workflows/build-and-deploy-oracle.yml
+++ b/.github/workflows/build-and-deploy-oracle.yml
@@ -2,12 +2,12 @@ name: Oracle Image CI
 on:
   push:
     branches:
-      - 'main'
+      - 'uniswap-mock '
     tags:
       - 'v*'
   pull_request:
     branches:
-      - 'main'
+      - 'uniswap-mock '
 
 env:
   REGISTRY: ghcr.io
