--- a/packages/oracle/Dockerfile
+++ b/packages/oracle/Dockerfile
@@ -34,7 +34,8 @@ COPY --chown=node:node --from=build ["/usr/src/app/packages/contracts/artifacts"
 COPY --chown=node:node ["packages/contracts/package.json", "./packages/contracts/"]
 
 COPY --chown=node:node --from=build ["/usr/src/app/packages/contracts-uniswap-mock/artifacts", "packages/contracts-uniswap-mock/artifacts/"]
-COPY --chown=node:node ["packages/contracts-uniswap-mock/package.json", "./packages/contracts-uniswap-mock/"]
+COPY ["packages/contracts-uniswap-mock/package.json", "./packages/contracts-uniswap-mock/"]
+#COPY --chown=node:node ["packages/contracts-uniswap-mock/package.json", "./packages/contracts-uniswap-mock/"]
 
 WORKDIR /app/packages/oracle
 RUN yarn install --frozen-lockfile
