--- a/.github/workflows/build-and-deploy-oracle.yml
+++ b/.github/workflows/build-and-deploy-oracle.yml
@@ -99,6 +99,9 @@ jobs:
         helm upgrade -i $SERVICE_NAME \
           -n $NAMESPACE \
           --set fullnameOverride=$SERVICE_NAME \
+          --set service.enabled=true \
+          --set service.port=80 \
+          --set service.targetport=80 \
           --set image.repository=$REGISTRY \
           --set image.name=$REGISTRY/$IMAGE_NAME \
           --set image.tag=$IMAGE_TAG \
