update fee value

--- a/packages/deploy/src/data/deploy/arbitrum/config.json
+++ b/packages/deploy/src/data/deploy/arbitrum/config.json
@@ -76,6 +76,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "2%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
@@ -93,6 +94,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
@@ -110,6 +112,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
