--- a/packages/deploy/src/data/deploy/ethereum/config.json
+++ b/packages/deploy/src/data/deploy/ethereum/config.json
@@ -90,6 +90,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
@@ -107,6 +108,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "1%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
@@ -124,6 +126,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "2%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
