--- a/packages/deploy/src/data/deploy/ganache/config.json
+++ b/packages/deploy/src/data/deploy/ganache/config.json
@@ -48,6 +48,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "2%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
