--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -45,6 +45,7 @@
         "interestRate": "5.4%",
         "maxLeverage": "20",
         "swapFee": "0.1%",
+        "fee": "2%",
         "priceAgo": "15 min",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
