--- a/.github/workflows/build-and-deploy-marginly-minifront.yml
+++ b/.github/workflows/build-and-deploy-marginly-minifront.yml
@@ -1,13 +1,11 @@
 name: Marginly Image CI
 on:
+  workflow_run:
+    workflows: [Unit tests]
+    types: [completed]
   push:
-    branches:
-      - 'main'
     tags:
       - 'v*'
-  pull_request:
-    branches:
-      - 'main'
   workflow_dispatch:
 
 env:
