--- a/packages/cli-common/package.json
+++ b/packages/cli-common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@marginly/cli-common",
   "version": "0.1.0",
-  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "author": "EqLab",
   "license": "MIT",
   "scripts": {
@@ -22,6 +22,16 @@
     "commander": "^8.1.0",
     "ganache": "^7.7.3",
     "prompts": "^2.4.2",
-    "read": "^2.0.0"
+    "read": "^2.0.0",
+    "zksync-web3": "^0.14.3"
+  },
+  "exports": {
+    ".": "./dist/index.js",
+    "./signer-zk": "./dist/signer-zk.js"
+  },
+  "typesVersions": {
+    "*": {
+      "signer-zk": ["dist/signer-zk.d.ts"]
+    }
   }
 }
