--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -20,7 +20,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.0",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.2",
+    "zksync-web3": "^0.14.3"
   },
   "dependencies": {
     "@marginly/deploy": "0.1.0",
