Use L1 node url and L2 node url from config

--- a/packages/deploy/src/data/deploy/zksync-local/config.json
+++ b/packages/deploy/src/data/deploy/zksync-local/config.json
@@ -1,6 +1,7 @@
 {
   "systemContextDefaults": {
-    "ethNodeUri": "http://localhost:3050"
+    "ethNodeUri": "http://localhost:3050",
+    "l1NodeUri": "http://localhost:8545"
   },
   "connection": {
     "assertChainId": 270,
