--- a/packages/deploy/src/data/deploy/polygon-mumbai/config.json
+++ b/packages/deploy/src/data/deploy/polygon-mumbai/config.json
@@ -1,6 +1,6 @@
 {
   "systemContextDefaults": {
-    "ethNodeUri": "https://rpc-mumbai.maticvigil.com/"
+    "ethNodeUri": "https://rpc.ankr.com/polygon_mumbai"
   },
   "connection": {
     "assertChainId": 80001,
