--- a/packages/deploy/src/data/deploy/zksync-local/config.json
+++ b/packages/deploy/src/data/deploy/zksync-local/config.json
@@ -127,7 +127,8 @@
     ]
   },
   "marginlyFactory": {
-    "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa",
+    "feeHolder": "0xfee4F33f95ec3E63a774fCfa80171Ca2d76428A1",
+    "techPositionOwner": "0xaaaaE8DD2F7d0b31e8464C65F8D8721CD231b0D6",
     "wethTokenId": "weth"
   },
   "marginlyPools": [
@@ -140,6 +141,7 @@
         "maxLeverage": "20",
         "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
+        "fee": "2%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
@@ -157,6 +159,7 @@
         "maxLeverage": "20",
         "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
+        "fee": "2%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
@@ -174,6 +177,7 @@
         "maxLeverage": "20",
         "recoveryMaxLeverage": "17",
         "swapFee": "0.1%",
+        "fee": "2%",
         "positionSlippage": "2.0%",
         "mcSlippage": "5.0%",
         "priceAgo": "15 min",
