Upgrade all deploy configs to new format

--- a/packages/deploy/src/data/deploy/ethereum/config.json
+++ b/packages/deploy/src/data/deploy/ethereum/config.json
@@ -1,19 +1,10 @@
 {
   "systemContextDefaults": {
-    "ethNodeUri": "https://ethereum-mainnet-rpc.allthatnode.com"
+    "ethNodeUri": "https://eth.llamarpc.com"
   },
   "connection": {
     "assertChainId": 1,
     "ethOptions": {}
-  },
-  "uniswap": {
-    "factory": "0x1F98431c8aD98523631AE4a59f267346ea31F984",
-    "swapRouter": "0xE592427A0AEce92De3Edee1F18E0157C05861564"
-  },
-  "marginlyFactory": {
-    "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa",
-    "techPositionOwner": "0xDda7021A2F58a2C6E0C800692Cde7893b4462FB3",
-    "wethTokenId": "weth"
   },
   "tokens": [
     {
@@ -47,46 +38,55 @@
       "assertDecimals": 18
     }
   ],
-  "uniswapPools": [
-    {
-      "id": "usdc-weth",
-      "token0Id": "usdc",
-      "token1Id": "weth",
-      "fee": "0.05%",
-      "allowCreate": false,
-      "assertAddress": "0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640"
-    },
-    {
-      "id": "usdc-usdt",
-      "token0Id": "usdc",
-      "token1Id": "usdt",
-      "fee": "0.01%",
-      "allowCreate": false,
-      "assertAddress": "0x3416cF6C708Da44DB2624D63ea0AAef7113527C6"
-    },
-    {
-      "id": "blur-usdc",
-      "token0Id": "blur",
-      "token1Id": "usdc",
-      "fee": "0.3%",
-      "allowCreate": false,
-      "assertAddress": "0x92ab871abB9d567AA276b2CE58d0203d84E0181E"
-    },
-    {
-      "id": "ldo-weth",
-      "token0Id": "ldo",
-      "token1Id": "weth",
-      "fee": "0.3%",
-      "allowCreate": false,
-      "assertAddress": "0xa3f558aebAecAf0e11cA4b2199cC5Ed341edfd74"
-    }
-  ],
+  "prices": [],
+  "uniswap": {
+    "factory": "0x1F98431c8aD98523631AE4a59f267346ea31F984",
+    "swapRouter": "0xE592427A0AEce92De3Edee1F18E0157C05861564",
+    "pools": [
+      {
+        "id": "usdc-weth",
+        "tokenAId": "usdc",
+        "tokenBId": "weth",
+        "fee": "0.05%",
+        "allowCreate": false,
+        "assertAddress": "0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640"
+      },
+      {
+        "id": "usdc-usdt",
+        "tokenAId": "usdc",
+        "tokenBId": "usdt",
+        "fee": "0.01%",
+        "allowCreate": false,
+        "assertAddress": "0x3416cF6C708Da44DB2624D63ea0AAef7113527C6"
+      },
+      {
+        "id": "blur-usdc",
+        "tokenAId": "blur",
+        "tokenBId": "usdc",
+        "fee": "0.3%",
+        "allowCreate": false,
+        "assertAddress": "0x92ab871abB9d567AA276b2CE58d0203d84E0181E"
+      },
+      {
+        "id": "ldo-weth",
+        "tokenAId": "ldo",
+        "tokenBId": "weth",
+        "fee": "0.3%",
+        "allowCreate": false,
+        "assertAddress": "0xa3f558aebAecAf0e11cA4b2199cC5Ed341edfd74"
+      }
+    ]
+  },
+  "marginlyFactory": {
+    "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa",
+    "techPositionOwner": "0xDda7021A2F58a2C6E0C800692Cde7893b4462FB3",
+    "wethTokenId": "weth"
+  },
   "marginlyPools": [
     {
       "id": "usdc-weth",
       "uniswapPoolId": "usdc-weth",
-      "baseToken": "token1",
-      "quoteToken": "token0",
+      "baseTokenId": "weth",
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
@@ -103,8 +103,7 @@
     {
       "id": "usdc-usdt",
       "uniswapPoolId": "usdc-usdt",
-      "baseToken": "token1",
-      "quoteToken": "token0",
+      "baseTokenId": "usdt",
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
@@ -121,8 +120,7 @@
     {
       "id": "usdc-blur",
       "uniswapPoolId": "blur-usdc",
-      "baseToken": "token0",
-      "quoteToken": "token1",
+      "baseTokenId": "blur",
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
@@ -139,8 +137,7 @@
     {
       "id": "ldo-weth",
       "uniswapPoolId": "ldo-weth",
-      "baseToken": "token1",
-      "quoteToken": "token0",
+      "baseTokenId": "weth",
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
