--- a/packages/deploy/src/data/deploy/goerli/config.json
+++ b/packages/deploy/src/data/deploy/goerli/config.json
@@ -6,15 +6,6 @@
     "assertChainId": 5,
     "ethOptions": {}
   },
-  "uniswap": {
-    "factory": "0x1F98431c8aD98523631AE4a59f267346ea31F984",
-    "swapRouter": "0xE592427A0AEce92De3Edee1F18E0157C05861564"
-  },
-  "marginlyFactory": {
-    "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa",
-    "techPositionOwner": "0xDda7021A2F58a2C6E0C800692Cde7893b4462FB3",
-    "wethTokenId": "weth"
-  },
   "tokens": [
     {
       "id": "usdc",
@@ -27,14 +18,15 @@
       "assertSymbol": "WETH1"
     }
   ],
+  "prices": [],
   "uniswap": {
     "factory": "0x1F98431c8aD98523631AE4a59f267346ea31F984",
     "swapRouter": "0xE592427A0AEce92De3Edee1F18E0157C05861564",
     "pools": [
       {
         "id": "usdc-weth",
-        "token0Id": "usdc",
-        "token1Id": "weth",
+        "tokenAId": "usdc",
+        "tokenBId": "weth",
         "fee": "0.05%",
         "allowCreate": false
       }
@@ -42,14 +34,14 @@
   },
   "marginlyFactory": {
     "feeHolder": "0x4c576Bf4BbF1d9AB9c359414e5D2b466bab085fa",
+    "techPositionOwner": "0xDda7021A2F58a2C6E0C800692Cde7893b4462FB3",
     "wethTokenId": "weth"
   },
   "marginlyPools": [
     {
       "id": "usdc-weth",
       "uniswapPoolId": "usdc-weth",
-      "baseToken": "token1",
-      "quoteToken": "token0",
+      "baseTokenId": "weth",
       "params": {
         "interestRate": "5.4%",
         "maxLeverage": "20",
