--- a/packages/contracts-uniswap-mock/package.json
+++ b/packages/contracts-uniswap-mock/package.json
@@ -47,6 +47,7 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.1",
     "typescript": "^4.9.4",
-    "zksync-web3": "^0.14.3"
+    "zksync-web3": "^0.14.3",
+    "@matterlabs/hardhat-zksync-verify": "^0.1.8"
   }
 }
