--- a/packages/oracle/package.json
+++ b/packages/oracle/package.json
@@ -31,6 +31,7 @@
     "@openzeppelin/contracts": "^4.8.0",
     "yargs": "^13.3.2",
     "node-fetch": "^2.6.9",
-    "ethers": "^5.7.2"
+    "ethers": "^5.7.2",
+    "async-mutex": "^0.4.0"
   }
 }
